# essence

./: .gitignore  .gitmodules  CMakeLists.txt  LLVMExtractor.cpp  LLVMExtractor.hpp  Module.cpp  Module.h  README.md  code_generation.cpp  handsan.cpp  main.cpp  main.py  name_generation.cpp  setup.py  skelmain.cpp  skelmain.hpp  test_main.py
handsanitizer/: DeclarationManager.cpp  DeclarationManager.h  FunctionCallerGenerator.cpp  FunctionCallerGenerator.h  JsonInputParser.cpp  JsonInputParser.h  JsonOutputGenerator.cpp  JsonOutputGenerator.h  LLVMExtractor.cpp  LLVMExtractor.hpp  Module.cpp  Module.h  SpecificationPrinter.cpp  SpecificationPrinter.h  code_generation.cpp  handsan.cpp  handsan.hpp  main.cpp  name_generation.cpp
include/: code_generation.hpp  handsan.hpp  name_generation.hpp
src/essence/: cli.py
test/: arraytest.c  arraytest_globals.c  cyclic_with_single_struct.c  cyclic_with_single_struct.json  direct_struct_return_tests.c  direct_struct_return_tests.json  direct_struct_return_with_nested_definitions.c  direct_struct_return_with_nested_definitions.json  full_struct_tests.c  full_struct_tests.json  global_tests.c  multi_dimensional_arrays.c  multi_dimensional_arrays.json  multi_dimensional_arrays_with_pointer_types.c  multi_dimensional_arrays_with_pointer_types.json  output_contains_global_array_values_tests.c  pointer_array_assignment_not_null_terminated_test.c  pointer_array_assignment_not_null_terminated_test.json  pointer_array_assignment_null_terminated_test.c  pointer_array_assignment_null_terminated_test.json  pointer_array_of_ints_test.c  pointer_array_of_ints_test.json  pointer_direct_byte_assignment_test.c  pointer_direct_byte_assignment_test.json  pointer_direct_string_assignment_test.c  pointer_direct_string_assignment_test.json  pointer_global_assignment_test.c  pointer_global_assignment_test.json  pointer_in_struct_test.c  pointer_in_struct_test.json  pointertest.c  read_none_write_only_reads_memory_test.c  scalar_assignment_tests.c  scalar_assignment_tests.json  setGlobalScalarsTest.c  stripped_function_test.c  test_scalar_assignment.py
